--- a/docs/readme.me
+++ b/docs/readme.me
@@ -1,1 +1,14 @@
-﻿
+# 문서 설명
+  1. <b>check</b>
+     * 2차 버전 제작시 점검하고 고려해야 할 사항 기록
+  2. bluedot
+     * 라즈베리파이와 안드로이드 폰을 블루투스로 연동하여 안드로이드 폰을 조이스틱 역할을 하도록 함
+  3. gpiopin
+     * 라즈베리파이의 GPIO 핀을 제어하기 위한 드라이브 설치
+  4. hangul
+     * 라즈베리파이 한글 설치
+  5. logitech-webcam-c270
+     * 라즈베리파이의 로지텍 웹캠 설정
+     * Python 등으로 제어하기 위한 정보는 아직 없음
+  6. remotevnc
+     * 라즈베리파이를 Windows 원격데스크톱으로 접속할 수 있도록 설정하는 법
